make restaurant name text no longer wrap on reservation index item tiles

--- a/app/assets/stylesheets/components/_reservation_index_item.scss
+++ b/app/assets/stylesheets/components/_reservation_index_item.scss
@@ -39,7 +39,7 @@
 
 .res-details {
     display: flex;
-    margin-left: 5px;
+    // margin-left: 5px;
 }
 
 .res-icon {
@@ -53,8 +53,8 @@
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    margin-left: 3%;
-    margin-right: 3%;
+    // margin-left: 3%;
+    // margin-right: 3%;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     color: darkslategray; 
@@ -79,7 +79,7 @@
     // height: 35px;
     // width: 12vw;
     margin-right: 5px;
-    margin-left: 5px;
+    // margin-left: 5px;
     color: gray;
     padding-top: .5%;
     font-family: Arial, Helvetica, sans-serif;
